# mpv_subserver

./: .gitignore  README.md  flake.nix  pyproject.toml  subtitle-viewer.conf.example  subtitle-viewer.lua
server/: __init__.py  config.py  main.py  srt_parser.py
server/static/: index.html  script.js  style.css
tests/: __init__.py  test_delta_updates.py  test_srt_parser.py
