[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpv-subtitle-viewer"
version = "0.1.0"
description = "Language learning subtitle viewer for MPV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pysubs2>=1.6.0",
]

[project.scripts]
mpv_subserver = "server.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["server"]

[tool.setuptools.package-data]
server = ["static/*", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle errors, pyflakes, warnings, isort
ignore = ["E501"]  # line too long (handled by formatter)
